<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.smartgenhelpter.ui.login.viewmodel.LoginViewModel" />


        <variable
            name="click"
            type="com.smartgenhelpter.ui.login.activity.RegisterActivity.RegisterClickProxy" />


    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.login.activity.RegisterActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp.30"
                android:text="@string/login_register_new"
                android:textColor="@color/black_121"
                android:textSize="@dimen/sp.24"
                android:textStyle="bold" />


            <com.smartgenhelpter.ui.widget.view.RegexEditText
                android:id="@+id/et_reg_phone"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp.70"
                android:hint="@string/register_input_account"
                android:text="@={viewModel.userName}"
                app:regexType="nonnull" />

            <View style="@style/HorizontalLineStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp.25"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/dp.30">


                <com.smartgenhelpter.ui.widget.view.RegexEditText
                    android:id="@+id/et_reg_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/register_input_code"
                    android:inputType="number"
                    android:paddingStart="@dimen/dp.30"
                    android:paddingTop="@dimen/dp.20"
                    android:paddingBottom="@dimen/dp.20"
                    android:text="@={viewModel.code}"
                    android:textColor="@color/black_121"
                    android:textColorHint="#4D121E36"
                    android:textSize="@dimen/sp.16" />

                <com.smartgenhelpter.ui.widget.view.CountdownView
                    android:id="@+id/cv_get_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="@{()->click.getCode()}"
                    android:text="@string/login_get_code"
                    android:textColor="@drawable/countdown_color_selector"
                    android:textSize="@dimen/sp.16" />

            </LinearLayout>


            <View style="@style/HorizontalLineStyle" />


            <com.smartgenhelpter.ui.widget.view.PasswordEditText
                android:id="@+id/et_reg_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp.25"
                android:hint="@string/register_input_newpassword"
                android:text="@={viewModel.password}"
                app:regexType="nonnull" />

            <View style="@style/HorizontalLineStyle" />


            <com.smartgenhelpter.ui.widget.view.PasswordEditText
                android:id="@+id/et_reg_newPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp.25"
                android:hint="@string/register_input_againpassword"
                android:text="@={viewModel.newPassword}"
                app:regexType="nonnull" />

            <View style="@style/HorizontalLineStyle" />


            <Button
                android:id="@+id/bt_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp.30"
                android:layout_marginTop="@dimen/dp.70"
                android:layout_marginEnd="@dimen/dp.30"
                android:background="@drawable/button_round_selector"
                android:onClick="@{()->click.reg()}"
                android:text="@string/register_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp.18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp.20"
                android:layout_marginTop="@dimen/dp.25"
                android:layout_marginEnd="@dimen/dp.30"
                android:gravity="center_vertical"
                android:onClick="@{()->click.protocol()}"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_register_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:button="@null"
                    android:drawableStart="@drawable/checkbox_selector"
                    android:padding="@dimen/dp_10" />

                <TextView
                    android:id="@+id/tv_register_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:textColor="@color/black_464"
                    android:textSize="@dimen/sp_14" />


            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>